@@ -10,18 +10,19 @@ import com.google.api.client.json.gson.GsonFactory;
 import com.google.api.client.util.store.FileDataStoreFactory;
 import com.google.api.services.sheets.v4.Sheets;
 import com.google.api.services.sheets.v4.SheetsScopes;
+import net.minecraft.client.Minecraft;
 
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.security.GeneralSecurityException;
+import java.util.Collections;
 import java.util.List;
 
 public class SheetHandler {
     public static Sheets sheetsService;
-
-    public static String APPLICATION_NAME = "Example";
-    public static String SPREADSHEET_ID = "1c_PII4g37sQC635shFre0tyMDBspNK-Sd2jmkKgBEkY";
+    public static final String APPLICATION_NAME = "Schnittstelle-Aktinachweis";
+    public static final String SPREADSHEET_ID = "1qNJK29KxPqzCjoYJ5Hmw1wrxRAwxtOT4jrFjLnHbuaw";
 
     public static Credential authorize() throws IOException, GeneralSecurityException {
         InputStream in = SheetHandler.class.getResourceAsStream("/credentials.json");
@@ -30,7 +31,7 @@ public class SheetHandler {
                 GsonFactory.getDefaultInstance(), new InputStreamReader(in)
         );
 
-        List<String> scopes = List.of(SheetsScopes.SPREADSHEETS);
+        List<String> scopes = Collections.singletonList(SheetsScopes.SPREADSHEETS);
 
         GoogleAuthorizationCodeFlow flow = new GoogleAuthorizationCodeFlow.Builder(
                 GoogleNetHttpTransport.newTrustedTransport(), GsonFactory.getDefaultInstance(),
@@ -51,5 +52,17 @@ public class SheetHandler {
                 GsonFactory.getDefaultInstance(), credential)
                 .setApplicationName(APPLICATION_NAME)
                 .build();
+    }
+
+    public static boolean checkConnection() throws IOException {
+        try {
+            sheetsService.spreadsheets().values()
+                    .get(SPREADSHEET_ID, Minecraft.getMinecraft().player.getName() + "!F21:H23")
+                    .execute();
+        } catch (IOException e) {
+            return false;
+        }
+
+        return true;
     }
 }
